  inner border 1-pixel wide (like Atari TOS). (RFB)

2015-01-13
- bios/machine.c bios/machine.h: Properly detect DIP switches, with special
  case to avoid crashing with ARAnyM-JIT. (VRI)

2015-01-14
- po/gr.po: Updated Greek translation. Contributed by Christos Tziotzis. (VRI)

2015-01-15
- po/fi.po: Updated Finnish translation. Contributed by Eero Tamminen. (VRI)
- po/fr.po: Improved a few strings. Contributed by Eero Tamminen. (VRI)

2015-01-17
- include/config.h bios/machine.c bios/machine.h: Early detection of ARAnyM
  with new CONF_WITH_ARANYM define and is_aranym flag. (VRI)
- bios/ide.c: Do not detect additional IDE interfaces on ARAnyM due to crashes
  with some versions of ARAnyM-JIT. (VRI)

2015-01-18
- bios/machine.c: Use new flag is_aranym in DIP switch detection. (VRI)
- po/it.po: Updated. Contributed by Lodovico Zanier. (VRI)
- po/es.po: Updated. Contributed by David Gálvez. (VRI)
- include/config.h: Set CONF_WITH_ARANYM only if DETECT_NATIVE_FEATURES. (VRI)

2015-01-31
- aes/gemgsxif.c: Fixed warning with GCC 4.7.1. (VRI)

2015-02-11
- printbss.sh: Make it compatible with Debian /bin/sh. (VRI)

2015-02-14
- po/cs.po: Updated Czech translation. Contributed by Jan Krupka. (VRI)
- po/es.po: Fixed the width of menu items. (VRI)

2015-02-15
- desk/desktop.rsc po/*.po: Fixed the width of all the EmuDesk menus. (VRI)

2015-02-17
- desk/desktop.rsc po/*.po: Set the width of the Desk menu to 20 characters
  like TOS to make room for accessory menu items. (VRI)

2015-02-19
- bios/ide.c: Limit IDE interfaces to 1 for non-Firebee hardware, to avoid
  detecting non-existent interfaces due to incomplete hardware address
  decoding.

2015-02-24
- *: Updated copyright year for files modified since last release. (VRI)
- aes/optimize.c: Removed commented out include. (VRI)
- aes/gemdosif.S aes/gemstart.S aes/optimopt.S desk/deskstart.S
  util/stringasm.S: Tidied globals and externs. (VRI)
- Makefile: Fixed tabs. (VRI)